build: support for jdk8