@@ -1,56 +1,22 @@
 package io.github.genie.sql.api;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public interface Lists {
 
-    static <E> List<E> of(E e1, E e2) {
-        return List.of(e1, e2);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3) {
-        return List.of(e1, e2, e3);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4) {
-        return List.of(e1, e2, e3, e4);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5) {
-        return List.of(e1, e2, e3, e4, e5);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5, E e6) {
-        return List.of(e1, e2, e3, e4, e5,
-                e6);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5, E e6, E e7) {
-        return List.of(e1, e2, e3, e4, e5,
-                e6, e7);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5, E e6, E e7, E e8) {
-        return List.of(e1, e2, e3, e4, e5,
-                e6, e7, e8);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5, E e6, E e7, E e8, E e9) {
-        return List.of(e1, e2, e3, e4, e5,
-                e6, e7, e8, e9);
-    }
-
-    static <E> List<E> of(E e1, E e2, E e3, E e4, E e5, E e6, E e7, E e8, E e9, E e10) {
-        return List.of(e1, e2, e3, e4, e5,
-                e6, e7, e8, e9, e10);
+    @SafeVarargs
+    static <E> List<E> of(E... es) {
+        return Arrays.asList(es);
     }
 
     static <E> List<E> of(E e) {
-        return List.of(e);
+        return Collections.singletonList(e);
     }
 
     static <E> List<E> of() {
-        return List.of();
+        return Collections.emptyList();
     }
 
 }
